Separate pages for each subject

--- a/public/index.html
+++ b/public/index.html
@@ -183,7 +183,7 @@
     <br />
     <a href="/bellcurve">View Bell Curve</a>
     <br />
-    <a href="/grades">View All Grades</a>
+    <a href="/grades">View All Grades</a><br>
   </body>
   <script>
     document
